update host
